--- a/assets/scss/home-user.scss
+++ b/assets/scss/home-user.scss
@@ -1437,7 +1437,6 @@ body {
   }
 
   .favorite-artists {
-    overflow: hidden;
     .section-title {
       max-width: 45rem;
     }
@@ -1449,7 +1448,6 @@ body {
     .artists-slider{
       padding: 0 1rem;
       margin-top: 3rem;
-      overflow: visible;
       .swiper-slide{
         max-width: 18.375rem;
       }
